# UzoAgro-AI

./: .env  .gitignore  Dockerfile  README.md  app.py  data_generator.py  database.py  diagnostics_engine.py  matching_engine.py  pyproject.toml  requirements.txt  seed_cloud.py  uzoagro.db
.github/workflows/: sync.yml
data/: drivers.csv  matches.csv  requests.csv
frontend/: dashboard.html  diagnose.html  index.html  login.html  signup.html
